--- a/trivia/index.html
+++ b/trivia/index.html
@@ -19,6 +19,7 @@
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
                 <!-- TODO: Add multiple choice question here -->
+                 IN whi
             </div>
 
             <div class="section">
