Mon, Aug 26, 2024, 12:29 AM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -19,7 +19,8 @@
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
                 <!-- TODO: Add multiple choice question here -->
-                 IN whi
+                 IN which year did India won Cricket World Cup
+            </hr>
             </div>
 
             <div class="section">
