Mon, Aug 26, 2024, 12:32 AM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -19,7 +19,7 @@
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
                 <!-- TODO: Add multiple choice question here -->
-                 IN which year did India win Cricket World Cup
+                 In which year did India win Cricket World Cup
             </hr>
             </div>
 
