--- a/html/hello.html
+++ b/html/hello.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    
+    <head>
+        <title>
+            hello
+        </title>
+    </head>
+    <body>
+        hello there.
+    </body>
 </html>
