Mon, Aug 26, 2024, 1:05 AM +05:30

--- a/html/hello.html
+++ b/html/hello.html
@@ -7,6 +7,13 @@
         </title>
     </head>
     <body>
-        hello there.
+        <table>
+            <tr>
+                <td>hi</td>
+            </tr>
+            <tr>
+                <td>hello</td>
+            </tr>
+        </table>
     </body>
 </html>
