Mon, Aug 26, 2024, 1:05 AM +05:30

--- a/html/hello.html
+++ b/html/hello.html
@@ -10,6 +10,7 @@
         <table>
             <tr>
                 <td>hi</td>
+                <td>hello</td>
             </tr>
             <tr>
                 <td>hello</td>
