Mon, Aug 26, 2024, 1:09 AM +05:30

--- a/html/hello.html
+++ b/html/hello.html
@@ -7,14 +7,6 @@
         </title>
     </head>
     <body>
-        <table>
-            <tr>
-                <td>hi</td>
-                <td>hello</td>
-            </tr>
-            <tr>
-                <td>hello</td>
-            </tr>
-        </table>
+        <img src="
     </body>
 </html>
