Mon, Aug 26, 2024, 1:24 AM +05:30

--- a/html/hello.html
+++ b/html/hello.html
@@ -7,6 +7,6 @@
         </title>
     </head>
     <body>
-        <img src="
+        cs50 <a href ="https://cs50.harvard.edu/x/2024/weeks/8/"> week8 </a>
     </body>
 </html>
