Mon, Aug 26, 2024, 1:39 AM +05:30

--- a/html/hello.html
+++ b/html/hello.html
@@ -7,6 +7,12 @@
         </title>
     </head>
     <body>
-        cs50 <a  href ="https://cs50.harvard.edu/x/2024/weeks/8/"> week9 </a>
+        <div>
+            <input>
+            <button>2015</button>
+            <input>
+            <button>2011</button>
+            <button>2019</button>
+        </div>
     </body>
 </html>
