--- a/html/hello.html
+++ b/html/hello.html
@@ -2,6 +2,9 @@
 
 <html lang="en">
     <head>
+        <style>
+            
+        </style>
         <title>
             hello
         </title>
