--- a/trivia/index.html
+++ b/trivia/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
-                <hr>
+                <hr font-size: large>
                 <!-- TODO: Add multiple choice question here -->
                  In which year did India win Cricket World Cup
             </div>
