--- a/html/hello.html
+++ b/html/hello.html
@@ -10,6 +10,23 @@
         </title>
     </head>
     <body>
-        
+        <div class="header">
+            <h1>Trivia!</h1>
+        </div>
+
+        <div class="container">
+            <div class="section">
+                <h2>Part 1: Multiple Choice </h2>
+                <hr style="font-size: large">
+                <!-- TODO: Add multiple choice question here -->
+                 In which year did India win Cricket World Cup
+            </div>
+
+            <div class="section">
+                <h2>Part 2: Free Response</h2>
+                <hr>
+                <!-- TODO: Add free response question here -->
+            </div>
+        </div>
     </body>
 </html>
