--- a/trivia/index.html
+++ b/trivia/index.html
@@ -21,6 +21,10 @@
                 <!-- TODO: Add multiple choice question here -->
                  In which year did India win Cricket World Cup
                 </hr>
+                <button>2015</button>
+                <button>2019</button>
+                <button>2011</button>
+                <button>2024</button>
                 <hr>
             </div>
 
