--- a/trivia/index.html
+++ b/trivia/index.html
@@ -21,12 +21,12 @@
                 <!-- TODO: Add multiple choice question here -->
                  In which year did India win Cricket World Cup
                 </hr>
-
+                <div>
                 <button>2015</button>
                 <button>2019</button>
                 <button>2011</button>
                 <button>2024</button>
-          
+            </div>
             </div>
 
             <div class="section">
