Mon, Aug 26, 2024, 4:15 PM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -31,8 +31,12 @@
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-                <!-- TODO: Add free response question here -->
-                 
+                    <!-- TODO: Add free response question here -->
+                    Who is the Captian of Indian cricket Team in 2024?
+                    <div>
+                        <input>
+                        <button>Check Answer</button>
+                    </div>
             </div>
         </div>
     </body>
