--- a/trivia/index.html
+++ b/trivia/index.html
@@ -38,8 +38,10 @@
                     Who is the Captian of Indian cricket Team in 2024?
                 </h3>
                     <div>
-                        <input>
-                        <button>Check Answer</button>
+                        <form>
+                            <input>
+                            <button>Check Answer</button>
+                        </form>
                     </div>
             </div>
         </div>
