Mon, Aug 26, 2024, 4:41 PM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,7 +7,7 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
-            
+
         </script>
     </head>
     <body>
@@ -24,10 +24,10 @@
                     In which year did India win Cricket World Cup
                 </h3>
                 <div>
-                    <button>2015</button>
-                    <button>2019</button>
-                    <button>2011</button>
-                    <button>2024</button>
+                    <button id="wrong">2015</button>
+                    <button id="wrong">2019</button>
+                    <button id="correct">2011</button>
+                    <button id="wrong">2024</button>
                 </div>
             </div>
 
