Mon, Aug 26, 2024, 8:57 PM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -19,15 +19,14 @@
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
-                <h3>
+
                     <!-- TODO: Add multiple choice question here -->
-                    In which year did India win Cricket World Cup
-                </h3>
+                <h3>   In which year did India win Cricket World Cup</h3>
                 <div>
-                    <button id="wrong">2015</button>
-                    <button id="wrong">2019</button>
-                    <button id="correct ">2011</button>
-                    <button id="wrong">2024</button>
+                    <button class="incorrect">2015</button>
+                    <button class="incorrect">2019</button>
+                    <button class="correct">2011</button>
+                    <button class="incorrect">2024</button>
                 </div>
             </div>
 
