--- a/trivia/index.html
+++ b/trivia/index.html
@@ -29,20 +29,20 @@
                 <button class="incorrect">2024</button>
 
                 <p id="feedback1"></p>
-                
+
             </div>
 
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-                <h3>
                     <!-- TODO: Add free response question here -->
-                    Who is the Captian of Indian cricket Team in 2024?
-                </h3>
-                    <div>
-                        <input>
-                        <button>Check Answer</button>
-                    </div>
+                <h3>   Who is the Captian of Indian cricket Team in 2024? </h3>
+
+                    <input type="text">
+                    <button id="check">Check Answer</button>
+
+                    <p id="feedback2"></p>
+
             </div>
         </div>
     </body>
