Mon, Aug 26, 2024, 9:06 PM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -8,6 +8,14 @@
         <script>
             // TODO: Add code to check answers to questions
 
+            //run script once DOM is loaded
+            document.addEventListener('DOMContentLoaded',function()){
+
+                let correct = document.querySelector(' .correct');
+                correct.addEventListener('click', function()
+            )
+            }
+
         </script>
     </head>
     <body>
