Mon, Aug 26, 2024, 9:32 PM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -15,7 +15,7 @@
                 let correct = document.querySelector(' .correct');
                 correct.addEventListener('click', function(){
                     correct.style.backgroundColor = 'green';
-                    document.querySelector('#feedback1').innerHTML = 'correct!';
+                    document.querySelector('#feedback1').innerHTML = 'Correct!';
             });
 
                 //when any incorrect answer is clicked, change color to red
