Mon, Aug 26, 2024, 11:56 PM +05:30

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -9,7 +9,7 @@
             // TODO: Add code to check answers to questions
 
             //run script once DOM is loaded
-            document.addEventListener('DOMContentLoaded',function()){
+            document.addEventListener('DOMContentLoaded', function(){
 
                 //when coorect answer is clicked, change color to green
                 let correct = document.querySelector(".correct");
