--- a/homepage/index.html
+++ b/homepage/index.html
@@ -17,7 +17,7 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">About me</a>
+                  <a class="nav-link" href="#">About Me</a>
                   <a class="nav-link" href="#">My Education</a>
                 </div>
               </div>
