--- a/homepage/index.html
+++ b/homepage/index.html
@@ -8,7 +8,7 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,6 +23,6 @@
               </div>
             </div>
           </nav>
-        <h1>hello, welcome to my homepage</h1>
+        <h1>Hello, Welcome to my homepage</h1>
     </body>
 </html>
