Fri, Nov 1, 2024, 8:57 PM +05:30

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar navbar-expand bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/index.html">Home</a>
                   <a class="nav-link" href="#">About Me</a>
