Fri, Nov 1, 2024, 9:06 PM +05:30

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -20,6 +20,6 @@
               </div>
             </div>
           </nav>
-        <h1>Hello, Welcome to my homepage</h1>
+        <h1 class="shadow-sm p-3 mb-5 bg-body rounded">Hello, Welcome to my homepage</h1>
     </body>
 </html>
