--- a/homepage/index.html
+++ b/homepage/index.html
@@ -20,6 +20,8 @@
               </div>
             </div>
           </nav>
+          <div class="text-center">
         <h1 class="shadow-sm p-3 mb-5 bg-body rounded">Hello, Welcome to my homepage</h1>
+        </div>
     </body>
 </html>
