--- a/homepage/index.html
+++ b/homepage/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand bg-primary text-white ">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" href="#"></a>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
                 <div class="navbar-nav">
