--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,6 +9,9 @@
         <title>My Webpage</title>
     </head>
     <body>
+      <div class="alert alert-primary" role="alert">
+        welcome
+      </div>
         <nav class="navbar navbar-expand bg-primary text-white ">
             <div class="container">
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
