--- a/homepage/index.html
+++ b/homepage/index.html
@@ -14,8 +14,8 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/index.html">Home</a>
-                  <a class="nav-link" href="#">About Me</a>
-                  <a class="nav-link" href="#">My Education</a>
+                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/aboutme.html">About Me</a>
+                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/education.html">My Education</a>
                 </div>
               </div>
             </div>
