Mon, Nov 4, 2024, 6:07 PM +05:30

--- a/homepage/aboutme.html
+++ b/homepage/aboutme.html
@@ -8,4 +8,17 @@
         <link href="styles.css" rel="stylesheet">
         <title>about me</title>
     </head>
+    <body>
+        <nav class="navbar navbar-expand bg-primary text-white ">
+            <div class="container">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
+                <div class="navbar-nav">
+                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/aboutme.html">About Me</a>
+                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/education.html">My Education</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+    </body>
 </html>
