Mon, Nov 4, 2024, 6:15 PM +05:30

--- a/homepage/education.html
+++ b/homepage/education.html
@@ -9,7 +9,7 @@
         <title>about me</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand bg-primary text-white ">
+        <nav class="navbar navbar-expand bg-primary">
             <div class="container">
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
                 <div class="navbar-nav">
