Tue, Nov 5, 2024, 12:16 AM +05:30

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -16,7 +16,7 @@
                   <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/index.html">Home</a>
                   <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/aboutme.html">About Me</a>
                   <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/education.html">My Education</a>
-                  <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/education.html">Contact Me</a>
+                  <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/contact.html">Contact Me</a>
                 </div>
               </div>
             </div>
