--- a/homepage/education.html
+++ b/homepage/education.html
@@ -22,5 +22,14 @@
               </div>
             </div>
           </nav>
+          <h2> Bachelor of Engineering (B. TECH)</h2>
+          <h3>Internet of Things(2021-Present)-CGPA-7.1.</h3>
+          <h3>SRI INDU COLLEGE OF ENGINEERING & TECHNOLOGY ,SERIGUDA.</h3>
+          <br>
+          <h2> Higher Secondary Education (12th) Inter Board – 2021</h2>
+          <h3>PERCENTAGE: 89% -SR JUNIOR COLLEGE,KURIKYAL.</h3>
+          <br>
+          <h2> Secondary School Education (10th) – 2019 – CGPA: 9.3</h2>
+          <h3>SRI USHODAYA HIGH SCHOOL, MANCHERIAL.</h3>
     </body>
 </html>
