Thu, Nov 7, 2024, 11:33 PM +05:30

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -14,16 +14,30 @@
             <div class="container">
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
                 <div class="navbar-nav">
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/index.html">Home</a>
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/aboutme.html">About Me</a>
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/education.html">My Education</a>
-                  <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/contact.html">Contact Me</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/index.html">Home</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/aboutme.html">About Me</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/education.html">My Education</a>
+                  <a class="nav-link active" aria-current="page" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/contact.html">Contact Me</a>
                 </div>
               </div>
             </div>
           </nav>
-          <div>
-            
-        </div>
+          <div class="contact">
+              <a href="default.asp" class="linkedin">
+              <img src="download.png" alt="HTML tutorial" style="width:42px;height:42px;">
+              </a>
+              <br>
+              <a href="default.asp" class="email">
+              <img src="download.png" alt="HTML tutorial" style="width:42px;height:42px;">
+              </a>
+              <br>
+              <a href="default.asp">
+              <img src="download.png" alt="HTML tutorial" style="width:42px;height:42px;">
+              </a>
+              <br>
+              <a href="default.asp">
+              <img src="download.png" alt="HTML tutorial" style="width:42px;height:42px;">
+              </a>
+          </div>
     </body>
 </html>
