--- a/homepage/education.html
+++ b/homepage/education.html
@@ -14,22 +14,24 @@
             <div class="container">
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
                 <div class="navbar-nav">
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/index.html">Home</a>
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/aboutme.html">About Me</a>
-                  <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/education.html">My Education</a>
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/contact.html">Contact Me</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/index.html">Home</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/aboutme.html">About Me</a>
+                  <a class="nav-link active" aria-current="page" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/education.html">My Education</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/contact.html">Contact Me</a>
                 </div>
               </div>
             </div>
-          </nav class="edu-all">
-          <h2 class="edu-h2"> Bachelor of Engineering (B. TECH)</h2>
-          <h3 class="edu-h3">Internet of Things(2021-Present)-CGPA-7.18.</h3>
-          <h3 class="edu-h3">SRI INDU COLLEGE OF ENGINEERING & TECHNOLOGY ,SERIGUDA.</h3>
-          <br>
-          <h2 class="edu-h2"> Higher Secondary Education (12th) Inter Board – 2021</h2>
-          <h3 class="edu-h3">PERCENTAGE: 89% -SR JUNIOR COLLEGE,KURIKYAL.</h3>
-          <br>
-          <h2 class="edu-h2"> Secondary School Education (10th) – 2019 – CGPA: 9.3</h2>
-          <h3 class="edu-h3">SRI USHODAYA HIGH SCHOOL, MANCHERIAL.</h3>
+          </nav>
+          <div class="edu-all">
+              <h2 class="edu-h2"> Bachelor of Engineering (B. TECH)</h2>
+              <h3 class="edu-h3">Internet of Things(2021-Present)-CGPA-7.18.</h3>
+              <h3 class="edu-h3">SRI INDU COLLEGE OF ENGINEERING & TECHNOLOGY ,SERIGUDA.</h3>
+              <hr>
+              <h2 class="edu-h2"> Higher Secondary Education (12th) Inter Board – 2021</h2>
+              <h3 class="edu-h3">PERCENTAGE: 89% -SR JUNIOR COLLEGE,KURIKYAL.</h3>
+              <hr>
+              <h2 class="edu-h2"> Secondary School Education (10th) – 2019 – CGPA: 9.3</h2>
+              <h3 class="edu-h3">SRI USHODAYA HIGH SCHOOL, MANCHERIAL.</h3>
+         </div>
     </body>
 </html>
