--- a/homepage/aboutme.html
+++ b/homepage/aboutme.html
@@ -14,13 +14,25 @@
             <div class="container">
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> </div>
                 <div class="navbar-nav">
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/index.html">Home</a>
-                  <a class="nav-link active" aria-current="page" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/aboutme.html">About Me</a>
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/education.html">My Education</a>
-                  <a class="nav-link" href="https://fearful-mausoleum-r4gj6p66wv5q3pvjq-8080.app.github.dev/contact.html">Contact Me</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/aboutme.html">About Me</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/education.html">My Education</a>
+                  <a class="nav-link" href="https://fictional-space-sniffle-5gqwrxrr5jxx3pv4q-8080.app.github.dev/contact.html">Contact Me</a>
                 </div>
               </div>
             </div>
           </nav>
+          <div>
+            <h3 class="me1">
+              I am an aspiring and adaptable B.Tech student in Internet of Things, eager to work for an organization that offers opportunities for skill and knowledge enhancement, enabling personal growth and alignment with the organization's goals, while solving complex problems through innovative software solutions and making an impact with cutting-edge technology.
+            </h3>
+            <hr>
+            <h2 class="me2">
+              Hobbies
+            </h2>
+            <h3 class="me3">
+                Watching sports,movies, tv series, playing video games.
+            </h3>
+          </div>
     </body>
 </html>
