Fri, Nov 8, 2024, 12:24 AM +05:30

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -22,6 +22,9 @@
               </div>
             </div>
           </nav>
-          
+          <p id="me">
+            <img src="me.jpg" alt="my picture" >
+            A paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.
+          </p>
     </body>
 </html>
