Fri, Nov 8, 2024, 12:28 AM +05:30

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -23,7 +23,7 @@
             </div>
           </nav>
           <p id="me">
-            <img src="me.jpg" alt="my picture" >
+            <img id="me_jpg" src="me.jpg" alt="my picture">
             A paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.
           </p>
     </body>
