--- a/homepage/index.html
+++ b/homepage/index.html
@@ -24,7 +24,7 @@
           </nav>
           <p id="me">
             <img id="me_jpg" src="me.jpg" alt="my picture">
-            
+            <p id="me"><b>P SHIVA PRAJWAL REDDY</b></p>
           </p>
     </body>
 </html>
