--- a/homepage/index.html
+++ b/homepage/index.html
@@ -25,7 +25,7 @@
           <p id="me">
             <img id="me_jpg" src="me.jpg" alt="my picture">
             <p id="me"><b>P SHIVA PRAJWAL REDDY</b></p>
-            <p>4th Year IoT student at Sri Indu College of Engineering and THechnology</p>
+            <p>4th Year IoT student at Sri Indu College of Engineering and Technology</p>
           </p>
     </body>
 </html>
