--- a/homepage/index.html
+++ b/homepage/index.html
@@ -26,7 +26,7 @@
             <img id="me_jpg" src="me.jpg" alt="my picture">
             <p id="me"><b>P SHIVA PRAJWAL REDDY</b></p>
             <p>4th Year IoT student at Sri Indu College of Engineering and Technology</p>
-            <p><ul><li></li></ul></p>
+            <p>skills:<ul><li>HTML</li><li>CSS</li><li>JAVA</li><li>JAVA SCRIPT</li><li>python(basics)</li><li>C language</li></ul></p>
           </p>
     </body>
 </html>
