Fri, Nov 8, 2024, 1:03 AM +05:30

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -22,7 +22,7 @@
               </div>
             </div>
           </nav>
-          <p id="me">
+          <div id="me" >
             <img id="me_jpg" src="me.jpg" alt="my picture">
             <p id="me"><b>P SHIVA PRAJWAL REDDY</b></p>
             <p>4th Year IoT student at Sri Indu College of Engineering and Technology</p>
