--- a/homepage/index.html
+++ b/homepage/index.html
@@ -22,9 +22,9 @@
               </div>
             </div>
           </nav>
-          <div id="me" >
-            <img id="me_jpg" src="me.jpg" alt="my picture">
-            <p id="me"><b>P SHIVA PRAJWAL REDDY</b></p>
+          <div id="me">
+            <img id="me-jpg" src="me.jpg" alt="my picture">
+            <div id="me-text"><b>P SHIVA PRAJWAL REDDY</b></div>
             <p>4th Year IoT student at Sri Indu College of Engineering and Technology</p>
             <p>skills:<ul><li>HTML</li><li>CSS</li><li>JAVA</li><li>JAVA SCRIPT</li><li>python(basics)</li><li>C language</li></ul></p>
           </p>
