--- a/homepage/index.html
+++ b/homepage/index.html
@@ -27,6 +27,6 @@
             <div id="me-text"><b>P SHIVA PRAJWAL REDDY</b></div>
             <p>4th Year IoT student at Sri Indu College of Engineering and Technology</p>
             <p>skills:<ul><li>HTML</li><li>CSS</li><li>JAVA</li><li>JAVA SCRIPT</li><li>python(basics)</li><li>C language</li></ul></p>
-          </p>
+          </div>
     </body>
 </html>
